Adiciona nova compilaçào de glossario e hierarquia

--- a/glossario/glossario.tex
+++ b/glossario/glossario.tex
@@ -421,8 +421,8 @@
 \newline \textit{Ver também:} \Gls{dispositivo-de-proposicao-legislativa}, \Gls{exposicao-de-motivos}, \Gls{justificativa-da-proposicao-legislativa}.},
       }
 \newglossaryentry{prorrogacao-de-medida-provisoria-por-ato-declaratorio}{
-       name={Prorrogação de Medida Provisória por Ato Declaratório},
-       description={Ato pelo qual o Congresso Nacional ou Assembléia Legislativa prorroga a vigência de uma Medida Provisória. (RCN 1/2010 -- art 10).
+       name={Prorrogação de Medida Provisória},
+       description={Evento pelo qual ocorre a prorrogação do prazo de vigência de medida provisória por período determinado. No caso do atual ordenamento jurídico federal, um ato do Presidente do Congresso Nacional dá publicidade a esse evento. (RCN 1/2010 -- art 10).
 \newline \textit{Específico de:} \Gls{prorrogacao-de-vigencia-por-prazo-determinado}.},
       }
 \newglossaryentry{prorrogacao-de-vigencia}{
@@ -462,8 +462,8 @@
       }
 \newglossaryentry{ratificacao-de-ato-internacional}{
        name={Ratificação de Ato Internacional},
-       description={Evento pelo qual o Presidente da República ou, por
-       delegação, o Ministro das Relações Exteriores, confirma a adesão do Brasil ao ato internacional anteriormente assinado. Por ser ato específico da formação de norma internacional, este evento está fora do escopo do SILEX.}, }
+       description={Evento pelo qual o Presidente da República ou, por delegação, o Ministro das Relações Exteriores, confirma a adesão do Brasil ao ato internacional anteriormente assinado. Por ser ato específico da formação de norma internacional, este evento está fora do escopo do SILEX.},
+      }
 \newglossaryentry{reedicao}{
        name={Reedição},
        description={É a publicação da medida provisória estendendo sua vigência. A reedição de Medida Provisória, com ou sem alteração no seu texto, é considerada como uma Versão de Norma Jurídica Integral e não como uma nova Norma Jurídica.
@@ -503,7 +503,7 @@
       }
 \newglossaryentry{rejeicao-de-medida-provisoria}{
        name={Rejeição de Medida Provisória},
-       description={Ato pelo qual o Poder Legislativo, por meio de um ato declaratório do Presidente do Congresso Nacional, do Presidente do Senado Federal ou do Presidente da Câmara dos Deputados rejeita uma Medida Provisória caso não se verifique os pressupostos de relevância e urgência constitucional. Antes da Resolução CN 1/2002, utilizava-se o termo ``Declaração de Insubsistência de Medida Provisória''.
+       description={Ato pelo qual o Poder Legislativo, por meio de um ato declaratório do Presidente da Casa Legislativa, rejeita uma Medida Provisória caso não se verifique os pressupostos de relevância e urgência constitucional. Antes da Resolução CN 1/2002, utilizava-se o termo ``Declaração de Insubsistência de Medida Provisória''.
 \newline \textit{Ver também:} \Gls{declaracao-de-insubsistencia-de-medida-provisoria}.},
       }
 \newglossaryentry{rejeicao-do-veto}{
@@ -803,6 +803,16 @@
        description={Texto resultante da aplicação da retificação no texto original.
 \newline \textit{Específico de:} \Gls{texto-compilado}.
 \newline \textit{Ver também:} \Gls{texto-da-retificacao}, \Gls{texto-original}.},
+      }
+\newglossaryentry{tipo-formal-da-norma}{
+       name={Tipo Formal da Norma},
+       description={Espécie da norma de acordo com a tipologia documental, tal como consta na epígrafe.
+\newline \textit{Ver também:} \Gls{tipo-material-da-norma}.},
+      }
+\newglossaryentry{tipo-material-da-norma}{
+       name={Tipo Material da Norma},
+       description={Espécie da norma de acordo com a forma como é incorporada ao ordenamento jurídico. Na maioria das vezes, coincide com o \gls{tipo-formal-da-norma}.
+\newline \textit{Ver também:} \Gls{tipo-formal-da-norma}.},
       }
 \newglossaryentry{tornar-sem-efeito--com-sentido-de-anulacao}{
        name={Tornar sem efeito (com sentido de Anulação)},
