--- a/glossario/hierarquia.tex
+++ b/glossario/hierarquia.tex
@@ -195,6 +195,8 @@ Suspensão de Execução \\
 Texto Atualizado \\ 
  \hspace*{1.0cm}\glosshsep \textit{Ver:} \Gls{texto-compilado} \\ 
 \Gls{texto-da-retificacao} \\ 
+\Gls{tipo-formal-da-norma} \\ 
+\Gls{tipo-material-da-norma} \\ 
 Tornar sem efeito (com sentido de Anulação) \\ 
  \hspace*{1.0cm}\glosshsep \textit{Ver:} \Gls{anulacao} \\ 
 \Gls{tornar-sem-efeito--com-sentido-de-retirada-de-eficacia} \\ 
