Ajustes nas imagens do Astah. Alteração da posição das imagens em preto e branco.

--- a/apendice_diagramas.tex
+++ b/apendice_diagramas.tex
@@ -44,3 +44,13 @@
 	%\legend{Fonte: }
 \end{figure}
 % ---
+
+% ---
+\begin{figure}[htb]
+	\caption{\label{fig_grafico_publicacao}Diagrama de Publicação}
+	\begin{center}
+	    \includegraphics[scale=0.4]{Publicacao.pdf}
+	\end{center}
+	%\legend{Fonte: }
+\end{figure}
+% ---
